// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TimelineSelection does not crash when there are no samples or markers 1`] = `
<body>
  <div>
    <div
      class="timelineSelection"
    >
      <div
        class="timelineHeader"
      >
        <button
          class="timelineSettingsHiddenTracks"
          type="button"
        >
          <span
            class="timelineSettingsHiddenTracksNumber"
          >
            ⁨2⁩
          </span>
           / 
          <span
            class="timelineSettingsHiddenTracksNumber"
          >
            ⁨2⁩
          </span>
           tracks
        </button>
        <div
          class="timelineRuler"
          style="--timeline-ruler-height: 20px;"
        >
          <ol
            class="timelineRulerContainer"
          />
        </div>
      </div>
      <div
        class="overflowEdgeIndicator tracksContainer timelineOverflowEdgeIndicator"
      >
        <div
          class="overflowEdgeIndicatorEdge topEdge"
        />
        <div
          class="overflowEdgeIndicatorEdge rightEdge"
        />
        <div
          class="overflowEdgeIndicatorEdge bottomEdge"
        />
        <div
          class="overflowEdgeIndicatorEdge leftEdge"
        />
        <div
          class="overflowEdgeIndicatorScrollbox tracksContainer timelineOverflowEdgeIndicatorScrollbox"
        >
          <div
            class="overflowEdgeIndicatorContentsWrapper"
          >
            <ol
              class="timelineThreadList"
            >
              <li
                class="timelineTrack"
              >
                <div
                  class="react-contextmenu-wrapper timelineTrackRow timelineTrackGlobalRow"
                >
                  <div
                    class="timelineTrackLabel timelineTrackGlobalGrippy"
                  >
                    <button
                      class="timelineTrackNameButton"
                      type="button"
                    >
                      Process 0
                    </button>
                  </div>
                  <div
                    class="timelineTrackTrack"
                  >
                    <div
                      class="timelineTrackThreadBlank"
                      style="--timeline-track-thread-blank-height: 30px;"
                    />
                  </div>
                </div>
                <ol
                  class="timelineTrackLocalTracks"
                >
                  <li
                    class="timelineTrack timelineTrackLocal"
                  >
                    <div
                      class="react-contextmenu-wrapper timelineTrackRow timelineTrackLocalRow selected"
                    >
                      <div
                        class="timelineTrackLabel timelineTrackLocalLabel timelineTrackLocalGrippy"
                        title="Empty
Thread: \\"Empty\\" (0)
Process: \\"default\\" (0)"
                      >
                        <button
                          class="timelineTrackNameButton"
                          type="button"
                        >
                          Empty
                        </button>
                        <button
                          class="timelineTrackCloseButton"
                          title="Hide track"
                          type="button"
                        />
                      </div>
                      <div
                        class="timelineTrackTrack"
                      >
                        <div
                          class="timelineTrackThread expanded"
                        >
                          <div
                            class="timelineMarkers selected"
                            data-testid="TimelineMarkersJank"
                          >
                            <div
                              class="react-contextmenu-wrapper"
                            >
                              <div>
                                <canvas
                                  class="timelineMarkersCanvas"
                                  height="50"
                                  width="400"
                                />
                              </div>
                            </div>
                          </div>
                          <div
                            class="threadActivityGraph"
                          >
                            <div>
                              <canvas
                                class="threadActivityGraphCanvas threadActivityGraphCanvas"
                                height="50"
                                width="400"
                              >
                                <h2>
                                  Activity Graph for 
                                  Empty
                                </h2>
                                <p>
                                  This graph shows a visual chart of thread activity.
                                </p>
                              </canvas>
                            </div>
                          </div>
                          <div
                            class="threadSampleGraph"
                          >
                            <div>
                              <canvas
                                class="threadSampleGraphCanvas threadSampleGraphCanvas"
                                height="50"
                                width="400"
                              >
                                <h2>
                                  Stack Graph for 
                                  Empty
                                </h2>
                                <p>
                                  This graph charts the stack height of each sample.
                                </p>
                              </canvas>
                            </div>
                          </div>
                          <div
                            class="timelineEmptyThreadIndicator"
                          />
                        </div>
                      </div>
                    </div>
                  </li>
                </ol>
              </li>
            </ol>
          </div>
        </div>
      </div>
      <div
        class="timelineSelectionHoverLine"
        style="visibility: hidden; left: 0px;"
      >
        <span
          class="timelineSelectionOverlayTime"
        />
      </div>
    </div>
    <nav
      class="react-contextmenu timelineTrackContextMenu"
      role="menu"
      style="position: fixed; opacity: 0; pointer-events: none;"
      tabindex="-1"
    >
      <form
        class="trackSearchField trackContextMenuSearchField"
      >
        <input
          autocomplete="off"
          class="trackSearchFieldInput photon-input"
          name="search"
          placeholder="Enter filter terms"
          required=""
          title="Only display tracks that match a certain text"
          type="search"
          value=""
        />
        <input
          class="trackSearchFieldButton"
          tabindex="-1"
          type="reset"
        />
      </form>
      <div
        class="react-contextmenu-separator"
      />
      <div
        aria-disabled="true"
        class="react-contextmenu-item react-contextmenu-item--disabled"
        role="menuitem"
        tabindex="-1"
      >
        Show all tracks
      </div>
      <div
        class="react-contextmenu-separator"
      />
      <div
        aria-checked="true"
        aria-disabled="false"
        class="react-contextmenu-item timelineTrackContextMenuItem checkable checked"
        role="menuitemcheckbox"
        tabindex="-1"
        title="Process 0 (Process ID: 0)"
      >
        <span>
          Process 0
        </span>
        <span
          class="timelineTrackContextMenuSpacer"
        />
        <span
          class="timelineTrackContextMenuPid"
        >
          (
          0
          )
        </span>
      </div>
      <div
        aria-checked="true"
        aria-disabled="false"
        class="react-contextmenu-item checkable indented checked"
        role="menuitemcheckbox"
        tabindex="-1"
      >
        Empty
      </div>
    </nav>
  </div>
</body>
`;

exports[`TimelineSelection renders the vertical line indicating the time position from the mouse cursor 1`] = `
<body>
  <div>
    <div
      class="timelineSelection"
    >
      <div
        class="timelineHeader"
      >
        <button
          class="timelineSettingsHiddenTracks"
          type="button"
        >
          <span
            class="timelineSettingsHiddenTracksNumber"
          >
            ⁨2⁩
          </span>
           / 
          <span
            class="timelineSettingsHiddenTracksNumber"
          >
            ⁨2⁩
          </span>
           tracks
        </button>
        <div
          class="timelineRuler"
          style="--timeline-ruler-height: 20px;"
        >
          <ol
            class="timelineRulerContainer"
          >
            <li
              class="timelineRulerNotch"
              style="left: 0px;"
            >
              <span
                class="timelineRulerNotchText"
              >
                0s
              </span>
            </li>
            <li
              class="timelineRulerNotch"
              style="left: 80px;"
            >
              <span
                class="timelineRulerNotchText"
              >
                2ms
              </span>
            </li>
            <li
              class="timelineRulerNotch"
              style="left: 160px;"
            >
              <span
                class="timelineRulerNotchText"
              >
                4ms
              </span>
            </li>
            <li
              class="timelineRulerNotch"
              style="left: 240px;"
            >
              <span
                class="timelineRulerNotchText"
              >
                6ms
              </span>
            </li>
            <li
              class="timelineRulerNotch"
              style="left: 320px;"
            >
              <span
                class="timelineRulerNotchText"
              >
                8ms
              </span>
            </li>
            <li
              class="timelineRulerNotch"
              style="left: 400px;"
            >
              <span
                class="timelineRulerNotchText"
              >
                10ms
              </span>
            </li>
          </ol>
        </div>
      </div>
      <div
        class="overflowEdgeIndicator tracksContainer timelineOverflowEdgeIndicator"
      >
        <div
          class="overflowEdgeIndicatorEdge topEdge"
        />
        <div
          class="overflowEdgeIndicatorEdge rightEdge"
        />
        <div
          class="overflowEdgeIndicatorEdge bottomEdge"
        />
        <div
          class="overflowEdgeIndicatorEdge leftEdge"
        />
        <div
          class="overflowEdgeIndicatorScrollbox tracksContainer timelineOverflowEdgeIndicatorScrollbox"
        >
          <div
            class="overflowEdgeIndicatorContentsWrapper"
          >
            <ol
              class="timelineThreadList"
            >
              <li
                class="timelineTrack"
              >
                <div
                  class="react-contextmenu-wrapper timelineTrackRow timelineTrackGlobalRow"
                >
                  <div
                    class="timelineTrackLabel timelineTrackGlobalGrippy"
                  >
                    <button
                      class="timelineTrackNameButton"
                      type="button"
                    >
                      Process 0
                    </button>
                  </div>
                  <div
                    class="timelineTrackTrack"
                  >
                    <div
                      class="timelineTrackThreadBlank"
                      style="--timeline-track-thread-blank-height: 30px;"
                    />
                  </div>
                </div>
                <ol
                  class="timelineTrackLocalTracks"
                >
                  <li
                    class="timelineTrack timelineTrackLocal"
                  >
                    <div
                      class="react-contextmenu-wrapper timelineTrackRow timelineTrackLocalRow selected"
                    >
                      <div
                        class="timelineTrackLabel timelineTrackLocalLabel timelineTrackLocalGrippy"
                        title="Empty
Thread: \\"Empty\\" (0)
Process: \\"default\\" (0)"
                      >
                        <button
                          class="timelineTrackNameButton"
                          type="button"
                        >
                          Empty
                        </button>
                        <button
                          class="timelineTrackCloseButton"
                          title="Hide track"
                          type="button"
                        />
                      </div>
                      <div
                        class="timelineTrackTrack"
                      >
                        <div
                          class="timelineTrackThread expanded"
                        >
                          <div
                            class="timelineMarkers selected"
                            data-testid="TimelineMarkersJank"
                          >
                            <div
                              class="react-contextmenu-wrapper"
                            >
                              <div>
                                <canvas
                                  class="timelineMarkersCanvas"
                                  height="50"
                                  width="400"
                                />
                              </div>
                            </div>
                          </div>
                          <div
                            class="threadActivityGraph"
                          >
                            <div>
                              <canvas
                                class="threadActivityGraphCanvas threadActivityGraphCanvas"
                                height="50"
                                width="400"
                              >
                                <h2>
                                  Activity Graph for 
                                  Empty
                                </h2>
                                <p>
                                  This graph shows a visual chart of thread activity.
                                </p>
                              </canvas>
                            </div>
                          </div>
                          <div
                            class="threadSampleGraph"
                          >
                            <div>
                              <canvas
                                class="threadSampleGraphCanvas threadSampleGraphCanvas"
                                height="50"
                                width="400"
                              >
                                <h2>
                                  Stack Graph for 
                                  Empty
                                </h2>
                                <p>
                                  This graph charts the stack height of each sample.
                                </p>
                              </canvas>
                            </div>
                          </div>
                          <div
                            class="timelineEmptyThreadIndicator"
                          />
                        </div>
                      </div>
                    </div>
                  </li>
                </ol>
              </li>
            </ol>
          </div>
        </div>
      </div>
      <div
        class="timelineSelectionHoverLine"
        style="left: 120px;"
      >
        <span
          class="timelineSelectionOverlayTime"
        >
          3ms
        </span>
      </div>
    </div>
    <nav
      class="react-contextmenu timelineTrackContextMenu"
      role="menu"
      style="position: fixed; opacity: 0; pointer-events: none;"
      tabindex="-1"
    >
      <form
        class="trackSearchField trackContextMenuSearchField"
      >
        <input
          autocomplete="off"
          class="trackSearchFieldInput photon-input"
          name="search"
          placeholder="Enter filter terms"
          required=""
          title="Only display tracks that match a certain text"
          type="search"
          value=""
        />
        <input
          class="trackSearchFieldButton"
          tabindex="-1"
          type="reset"
        />
      </form>
      <div
        class="react-contextmenu-separator"
      />
      <div
        aria-disabled="true"
        class="react-contextmenu-item react-contextmenu-item--disabled"
        role="menuitem"
        tabindex="-1"
      >
        Show all tracks
      </div>
      <div
        class="react-contextmenu-separator"
      />
      <div
        aria-checked="true"
        aria-disabled="false"
        class="react-contextmenu-item timelineTrackContextMenuItem checkable checked"
        role="menuitemcheckbox"
        tabindex="-1"
        title="Process 0 (Process ID: 0)"
      >
        <span>
          Process 0
        </span>
        <span
          class="timelineTrackContextMenuSpacer"
        />
        <span
          class="timelineTrackContextMenuPid"
        >
          (
          0
          )
        </span>
      </div>
      <div
        aria-checked="true"
        aria-disabled="false"
        class="react-contextmenu-item checkable indented checked"
        role="menuitemcheckbox"
        tabindex="-1"
      >
        Empty
      </div>
    </nav>
  </div>
</body>
`;
